--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-/Users/a1111/Desktop/dev/projects/Tracker/Tracker/Tracker.xcodeproj/xcuserdata
+/Users/a1111/Desktop/dev/projects/Tracker/Tracker/Tracker.xcodeproj/*.xcuserdata/
